--- a/honours.html
+++ b/honours.html
@@ -95,73 +95,11 @@
 <div class="middle">
 
 
+Honours archive !! here we go boys !!
 
-My name is Alicia.
-<br>
-I'm a designer from Melbourne currently completing my  <a href="honours.html">honours project</a>.
-
-</br>
-<br>
-<br>
-
-<a href="https://www.instagram.com/a_lee_c_a_/" target="_blank">stalk me</a> / <a href="http://amici.studio/">stalk my amici</a> /
-
-<a href="mailto:heyhey@a_lee_c_a.com">email me</a>
-
-<br>
-<br>
-<br>
-<br> 
-</div>
-<div class="typewriter2">
-
-<3
-<br>
-<br>
-
-
-
-</div>
+(uploads is on the way kids)
 
 
 
 
-
-
-
-
-
-<div class="footer">
-
-<div class="marqueetwo">
-  Hope you are having a wonderful day! And that the sun is shining extra bright and that there is no pollen in the air so you don't get hayfever I hope you don't get hayfever I don't get hayfever but maybe email me and I'll let you can tell me about your hayfever and I might reply saying I HOPE YOU'RE HAVING A MARVELLOUS DAY!
-
-
-
-
- </div>
-
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    </div>
-
-
-
-
-  </body>
-
-</link>
 </html>
