--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ I'm a designer from Melbourne currently completing my  <a href="honours.html">ho
 <br>
 <br>
 <br>
-<br> 
+<br>
 </div>
 <div class="typewriter2">
 
@@ -134,7 +134,7 @@ I'm a designer from Melbourne currently completing my  <a href="honours.html">ho
 <div class="footer">
 
 <div class="marqueetwo">
-  Hope you are having a wonderful day! And that the sun is shining extra bright and that there is no pollen in the air so you don't get hayfever I hope you don't get hayfever I don't get hayfever but maybe email me and I'll let you can tell me about your hayfever and I might reply saying I HOPE YOU'RE HAVING A MARVELLOUS DAY!
+  Hope you are having a wonderful day! And that the sun is shining extra bright and that there is no pollen in the air so you don't get hayfever I hope you don't get hayfever I don't get hayfever but maybe email me and you can tell me about your hayfever and I might reply saying I HOPE YOU'RE HAVING A MARVELLOUS DAY!
 
 
 
