--- a/honours.html
+++ b/honours.html
@@ -95,9 +95,11 @@
 <div class="middle">
 
 
-Honours archive !! here we go boys !!
+Honours archive !! here we go !!
 
-(uploads is on the way kids)
+(uploading and content is on the way kids)
+
+(I'm not behind you're behind)
 
 
 
