--- a/honours.html
+++ b/honours.html
@@ -65,7 +65,7 @@
 <!-- FONT IMPORT -->
 
     <meta charset="utf-8">
-    <title>Alicia Simons loves design</title>
+    <title>Alicia Simons loves honours</title>
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/reset.css">
     <script src="assets/js/jquery-3.2.0.min.js" charset="utf-8"></script>
@@ -78,30 +78,18 @@
 
 
 
-
-
-
-<div class="header">
-
-
-
-
   <br>
   <br>
   <br>
   <br>
   <br>
 
-<div class="middle">
+<div class="title">Honours Archive</div>
 
-
-Honours archive !! here we go !!
-
-(uploading and content is on the way kids)
-
-(I'm not behind you're behind)
-
-
-
-
+<br>
+<br>
+<br>
+<br>
+<div class="milestone_1"><a href="milestone1.html">Milestone 1</a>.
+</div>
 </html>
