--- a/index.html
+++ b/index.html
@@ -78,52 +78,6 @@
 
 
 
-    <!-- IMAGES POP UP-->
-
-<div class="pop p-sub">
-<img src="assets/images/002.jpg" alt="" style="width:700px;height:500px;">
-</div>
-
-
-<div class="pop p-bye">
-<img src="assets/images/001.jpg" alt="" style="width:600px;height:400px;">
-</div>
-
-<div class="pop p-003">
-<img src="assets/images/003.jpg" alt="" style="width:600px;height:400px;">
-</div>
-
-<div class="pop p-004">
-<img src="assets/images/004.jpg" alt="" style="width:600px;height:800px;">
-</div>
-
-<div class="pop p-005">
-<img src="assets/images/005.jpg" alt="" style="width:800px;height:900px;">
-</div>
-
-<div class="pop p-006">
-<img src="assets/images/006.jpg" alt="" style="width:600px;height:400px;">
-</div>
-
-<div class="pop p-007">
-<img src="assets/images/007.jpg" alt="" style="width:600px;height:400px;">
-</div>
-
-<div class="pop p-008">
-<img src="assets/images/008.jpg" alt="" style="width:1200px;height:800px;">
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -131,87 +85,37 @@
 
 
 
-<div class="marquee" style="font-family: CooperBT;">
-
-Hope you are having a wonderful day! And that your coffee is hot but not too hot that you burn your tongue and that you hire me cos I'm funny sometimes. BUT I MOSTLY I HOPE YOUR DAY IS MARVELLOUS</div>
-
-</div>
-
-
 
   <br>
   <br>
   <br>
   <br>
   <br>
-  <div class="typewriter2">
- Hi friend,
 
-
-</div>
-
-<br>
-<br>
-
-<div class="middle">
-  I am a designer/photographer/person
-
-</div>
-<br>
-<br>
-
-<div class="typewriter2">
-
-My name is Alicia
-</div>
-
-
-<br>
-<br>
-
-<div class="middle">
-  if you like my work let me know !
-
-</div>
-
-<br>
-<br>
-
-<div class="typewriter2">
-  (a-lee-c-a get it? ;)
-</div>
-
-<br>
-<br>
-<br>
 <div class="middle">
 
 
-STALK MY WORK
+
+My name is Alicia.
+<br>
+I'm a designer from Melbourne currently completing my  <a href="honours.html">honours project</a>.
+
+</br>
+<br>
 <br>
 
-<a href="https://www.instagram.com/a_lee_c_a_/" target="_blank">@ a_lee_c_a_</a>
+<a href="https://www.instagram.com/a_lee_c_a_/" target="_blank">stalk me</a> / <a href="http://amici.studio/">stalk my amici</a> /
+
+<a href="mailto:heyhey@a_lee_c_a.com">email me</a>
 
 <br>
 <br>
-
+<br>
+<br>
 </div>
 <div class="typewriter2">
 
 <3
-<br>
-<br>
-</div>
-
-
-<div class="middle">
-
-
-HIT ME UP
-<br>
-
-<a href="mailto:heyhey@a_lee_c_a.com">heyhey@a_lee_c_a.com</a>
-
 <br>
 <br>
 
@@ -230,7 +134,7 @@ HIT ME UP
 <div class="footer">
 
 <div class="marqueetwo">
-  Hope you are having a wonderful day! And that the sun is shining extra bright and that there is no pollen in the air so you don't get hayfever I hope you don't get hayfever I don't get hayfever but maybe email me and I'll let you can tell me about your hayfever and I might reply saying I HOPE YOU'RE HAVING A MARVELLOUS DAY!
+  Hope you are having a wonderful day! And that the sun is shining extra bright and that there is no pollen in the air so you don't get hayfever I hope you don't get hayfever I don't get hayfever but maybe email me and you can tell me about your hayfever and I might reply saying I HOPE YOU'RE HAVING A MARVELLOUS DAY!
 
 
 
