--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 My name is Alicia.
 <br>
-I'm a designer from Melbourne currently completing my  <a href="honours.html">honours project</a>.
+I'm a designer from Melbourne currently completing my honours project.
 
 </br>
 <br>
