--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   Hi I'm Alicia Simons.  <br> <br>
   Welcome to the a-lee-c-a project. <br><br>
   I like to photograph and print things and like hanging out with my <a href="http://amici.studio/">friends.</a> <br><br>
-  Not really on social media but check this <a href="https://www.instagram.com/alicia_rebekah" target="_blank">out.</a><br><br>
+  Not really on social media but check this <a href="https://www.instagram.com/a_lee_c_a_" target="_blank">out.</a><br><br>
   Email me questions, fun facts about dinosaurs and spam over <a href="mailto:heyhey@a_lee_c_a.com">here.</a><br><br>
   Below is some of my work. enjoy !!
 <br> <br> <br> <br>
