--- a/index.html
+++ b/index.html
@@ -80,13 +80,21 @@
 
 
 
-  Hi I'm Alicia Simons.  <br> <br>
-  Welcome to the a-lee-c-a project. <br><br>
-  I like to photograph and print things and like hanging out with my <a href="http://amici.studio/">friends.</a> <br><br>
-  Not really on social media but check this <a href="https://www.instagram.com/a_lee_c_a_" target="_blank">out.</a><br><br>
-  Email me questions, fun facts about dinosaurs and spam over <a href="mailto:heyhey@a_lee_c_a.com">here.</a><br><br>
-  Below is some of my work. enjoy !! (some of the pics are broken right now.. sorry !! am fixing it as you read) 
+  Hi I'm Alicia Simons.(pronounced a-lee-c-a)   <br> <br>
+  graphic designer and photographer.  <br> <br>
+  This site is a work in progress.  <br> <br>
+  
+  
+ <a href="https://jamesandalicia.photos"> See some pics here. </a> <br><br>
+   <a href="http://amici.studio/">See some work that I do with friends here.</a> <br><br>
+ <a href="https://www.instagram.com/aleeca_simons/" target="_blank">See my instagram account here.</a>
+  
+  <a href="mailto:aleeca.simons@gmail.com">Email me here.</a><br><br>
+  Contact me for a folio selection !!
 <br> <br> <br> <br>
+  
+  
+  <br> <br> <br> <br>
 
 
 </div>
@@ -94,415 +102,6 @@
 <center>
 
 <div class="type">
-
-
-  <img src="assets/images/film_0.jpg" alt="" style="width:700px;height:500px;">
-<br>
-01 gracie and thelma
-<br>
-<br>
-<br>
-  <img src="assets/images/design_31.jpg" alt="" style="width:500px;height:700px;">
-<br>
-02 a phone book about my experience at the pokies
-<br>
-<br>
-<br>
-  <img src="assets/images/film_19.jpg" alt="" style="width:700px;height:500px;">
-  <br>
-  03 my 21st birthday present
-  <br>
-  <br>
-  <br>
-  <img src="assets/images/design_.jpg" alt="" style="width:500px;height:700px;">
-<br>
-04 the kids at mada; a poster.
-<br>
-<br>
-<br>
-  <img src="assets/images/design_13.jpg" alt="" style="width:700px;height:500px;">
-<br>
-05 Untitled, some pages.
-<br>
-<br>
-<br>
-<img src="assets/images/film_20.jpg" alt="" style="width:700px;height:500px;">
-<br>
-06 christmas time
-<br>
-<br>
-<br>
-  <img src="assets/images/film_21.jpg" alt="" style="width:700px;height:500px;">
-<br>
-07 james, I see you watching me watching you.
-<br>
-<br>
-<br>
-<img src="assets/images/design_18.jpg" alt="" style="width:500px;height:700px;">
-<br>
-08 the pokies; a bathroom door.
-<br>
-<br>
-<br>
-  <img src="assets/images/film_22.jpg" alt="" style="width:700px;height:500px;">
-<br>
-09 white roses; for your grandma
-<br>
-<br>
-<br>
-<img src="assets/images/design_2.jpg" alt="" style="width:700px;height:500px;">
-<br>
-10 terror
-<br>
-<br>
-<br>
-<img src="assets/images/film_23.jpg" alt="" style="width:700px;height:500px;">
-<br>
-11 sisters in the suburbs
-<br>
-<br>
-<br>
-<img src="assets/images/design_12.jpg" alt="" style="width:700px;height:500px;">
-<br>
-12 dedicated to the girls
-<br>
-<br>
-<br>
-<img src="assets/images/design_9.jpg" alt="" style="width:700px;height:500px;">
-<br>13 fraser anning, you're wrong so I corrected you
-<br>
-<br>
-<br>
-<img src="assets/images/film_24.jpg" alt="" style="width:700px;height:500px;">
-<br>
-14 keep cup girl
-<br>
-<br>
-<br>
-<img src="assets/images/design_26.jpg" alt="" style="width:700px;height:500px;">
-<br>
-15 monash emails; a zine
-<br>
-<br>
-<br>
-<img src="assets/images/design_3.jpg" alt="" style="width:700px;height:500px;">
-<br>
-16 the words
-<br>
-<br>
-<br>
-<img src="assets/images/film_25.jpg" alt="" style="width:700px;height:500px;">
-<br>
-17 there is a really nice bakery here, highly recommend the vanilla slice
-<br>
-<br>
-<br>
-<img src="assets/images/film_26.jpg" alt="" style="width:700px;height:500px;">
-<br>
-18 colours
-<br>
-<br>
-<br>
-<img src="assets/images/design_8.jpg" alt="" style="width:700px;height:500px;">
-<br>
-19 fraser
-<br>
-<br>
-<br>
-<img src="assets/images/film_27.jpg" alt="" style="width:700px;height:500px;">
-<br>
-20 pastels
-<br>
-<br>
-<br>
-<img src="assets/images/film_28.jpg" alt="" style="width:500px;height:700px;">
-<br>
-21 <a href="https://thesecretgarden.tv/">for the girls</a>
-<br>
-<br>
-<br>
-<img src="assets/images/design_27.jpg" alt="" style="width:700px;height:500px;">
-<br>
-22 it is just hard to convince your generation to go
-<br>
-<br>
-<br>
-<img src="assets/images/design_25.jpg" alt="" style="width:700px;height:500px;">
-<br>
-23 you are loved, on film
-<br>
-<br>
-<br>
-<img src="assets/images/film_29.jpg" alt="" style="width:700px;height:500px;">
-<br>
-24 <a href="http://www.amici.studio/">amici</a>
-<br>
-<br>
-<br>
-<img src="assets/images/design_17.jpg" alt="" style="width:500px;height:700px;">
-<br>
-25 a handy tip for the pokies
-<br>
-<br>
-<br>
-<img src="assets/images/film_30.jpg" alt="" style="width:700px;height:500px;">
-<br>
-26 selena
-<br>
-<br>
-<br>
-
-<img src="assets/images/film_31.jpg" alt="" style="width:700px;height:500px;">
-<br>
-27 hold my hand
-<br>
-<br>
-<br>
-<img src="assets/images/film_32.jpg" alt="" style="width:500px;height:700px;">
-<br>
-28 james
-<br>
-<br>
-<br>
-<img src="assets/images/design_11.jpg" alt="" style="width:700px;height:500px;">
-<br>
-29 some work about the girls
-<br>
-<br>
-<br>
-<img src="assets/images/film_33.jpg" alt="" style="width:700px;height:500px;">
-<br>
-30 my home
-<br>
-<br>
-<br>
-<img src="assets/images/design_10.jpg" alt="" style="width:700px;height:500px;">
-<br>
-31 video killed the radio star
-<br>
-<br>
-<br>
-<img src="assets/images/film_34.jpg" alt="" style="width:700px;height:500px;">
-<br>
-32 golden undies
-<br>
-<br>
-<br>
-<img src="assets/images/film_35.jpg" alt="" style="width:700px;height:500px;">
-<br>
-33 for annie
-<br>
-<br>
-<br>
-<img src="assets/images/design_24.jpg" alt="" style="width:700px;height:500px;">
-<br>
-34 film
-<br>
-<br>
-<br>
-<img src="assets/images/film_36.jpg" alt="" style="width:700px;height:500px;">
-<br>
-35 all good things come to an end
-<br>
-<br>
-<br>
-<img src="assets/images/film_37.jpg" alt="" style="width:700px;height:500px;">
-<br>
-36 happy birthday alicia
-<br>
-<br>
-<br>
-<img src="assets/images/film_38.jpg" alt="" style="width:700px;height:500px;">
-<br>
-37 take me home, please.
-<br>
-<br>
-<br>
-<img src="assets/images/design_33.jpg" alt="" style="width:700px;height:500px;">
-<br>
-38 the kids, some stickers.
-<br>
-<br>
-<br>
-<img src="assets/images/design_28.jpg" alt="" style="width:700px;height:500px;">
-<br>
-39 a zine about the pokies
-<br>
-<br>
-<br>
-<img src="assets/images/design_6.jpg" alt="" style="width:700px;height:500px;">
-<br>
-40 Herald's headlines of 2017
-<br>
-<br>
-<br>
-<img src="assets/images/film_39.jpg" alt="" style="width:500px;height:700px;">
-<br>
-42 untitled, a shrine
-<br>
-<br>
-<br>
-<img src="assets/images/film_40.jpg" alt="" style="width:700px;height:500px;">
-<br>
-43 yummy
-<br>
-<br>
-<br>
-<img src="assets/images/design_23.jpg" alt="" style="width:700px;height:500px;">
-<br>
-44 untitled, the pics
-<br>
-<br>
-<br>
-<img src="assets/images/design_7.jpg" alt="" style="width:500px;height:700px;">
-<br>
-45 where are they?
-<br>
-<br>
-<br>
-<img src="assets/images/film_44.jpg" alt="" style="width:700px;height:500px;">
-<br>
-46 Ash
-<br>
-<br>
-<br>
-<img src="assets/images/film_45.jpg" alt="" style="width:700px;height:500px;">
-<br>
-47 a blood bath
-<br>
-<br>
-<br>
-<img src="assets/images/design_32.jpg" alt="" style="width:700px;height:500px;">
-<br>
-48 fraser's speech only gets worse and his presence only got more filthy
-<br>
-<br>
-<br>
-<img src="assets/images/design_29.jpg" alt="" style="width:700px;height:500px;">
-<br>
-49 collateral damage of the pokies
-<br>
-<br>
-<br>
-<img src="assets/images/film_46.jpg" alt="" style="width:700px;height:500px;">
-<br>
-50 before a blood bath
-<br>
-<br>
-<br>
-<img src="assets/images/design_22.jpg" alt="" style="width:700px;height:500px;">
-<br>
-51 where do we find them?
-<br>
-<br>
-<br>
-<img src="assets/images/film_47.jpg" alt="" style="width:700px;height:500px;">
-<br>
-52 a wedding
-<br>
-<br>
-<br>
-<img src="assets/images/design_14.jpg" alt="" style="width:700px;height:500px;">
-<br>
-53 a blod bath in a publication
-<br>
-<br>
-<br>
-<img src="assets/images/film_48.jpg" alt="" style="width:500px;height:700px;">
-<br>
-54 a girl on fire
-<br>
-<br>
-<br>
-<img src="assets/images/film_49.jpg" alt="" style="width:500px;height:700px;">
-<br>
-55 nancy on fire
-<br>
-<br>
-<br>
-<img src="assets/images/design_16.jpg" alt="" style="width:500px;height:700px;">
-<br>
-56 you're not alone and we love you
-<br>
-<br>
-<br>
-<img src="assets/images/film_50.jpg" alt="" style="width:700px;height:500px;">
-<br>
-57 nancy broke the tv
-<br>
-<br>
-<br>
-<img src="assets/images/film_51.jpg" alt="" style="width:500px;height:700px;">
-<br>
-58 nancy is sad, on film
-<br>
-<br>
-<br>
-<img src="assets/images/design_15.jpg" alt="" style="width:500px;height:700px;">
-<br>
-59 nancy, ironing. digital
-<br>
-<br>
-<br>
-<img src="assets/images/film_53.jpg" alt="" style="width:700px;height:500px;">
-<br>
-60 dancing queen, young and swwet only 17
-<br>
-<br>
-<br>
-<img src="assets/images/film_54.jpg" alt="" style="width:500px;height:700px;">
-<br>
-61 melbourne
-<br>
-<br>
-<br>
-<img src="assets/images/film_55.jpg" alt="" style="width:700px;height:500px;">
-<br>
-62 nancy, before
-<br>
-<br>
-<br>
-<img src="assets/images/design_19.jpg" alt="" style="width:700px;height:500px;">
-<br>
-63 a comment
-<br>
-<br>
-<br>
-<img src="assets/images/film_56.jpg" alt="" style="width:700px;height:500px;">
-<br>
-64 nancy, hanging out with herself
-<br>
-<br>
-<br>
-<img src="assets/images/film_57.jpg" alt="" style="width:700px;height:500px;">
-<br>
-65 look what we made her do
-<br>
-<br>
-<br>
-<img src="assets/images/design_30.jpg" alt="" style="width:700px;height:500px;">
-<br>
-66 mad about the pokies
-<br>
-<br>
-<br>
-<img src="assets/images/film_58.jpg" alt="" style="width:700px;height:500px;">
-<br>
-67 nancy and the bin
-<br>
-<br>
-<br>
-
-Impressed you scrolled this far, congrats baby.<br>
-If you'd like to find out more about my work please do email me.
-
-<br>
-<br>
-
-
-</div>
-
-</center>
 
 
   </body>
