--- a/index.html
+++ b/index.html
@@ -88,11 +88,12 @@
  <a href="https://jamesandalicia.photos"> See some pics here. </a> <br><br>
    <a href="http://amici.studio/">See some work that I do with friends here.</a> <br><br>
  <a href="https://www.instagram.com/aleeca_simons/" target="_blank">See my instagram account here.</a>
-  
+  <br> <br>
   <a href="mailto:aleeca.simons@gmail.com">Email me here.</a><br><br>
   Contact me for a folio selection !!
 <br> <br> <br> <br>
   
+  <img src="trial_1/assets/images/film_22.jpg" alt="" style="width:700px;height:500px;">
   
   <br> <br> <br> <br>
 
