--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   Contact me for a folio selection !!
 <br> <br> <br> <br>
   
-  <img src="trial_1/assets/images/film_22.jpg" alt="" style="width:700px;height:500px;">
+  <img src="assets/images/film_22.jpg" alt="" style="width:700px;height:500px;">
   
   <br> <br> <br> <br>
 
