--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
   Contact me for a folio selection !!
 <br> <br> <br> <br>
   
-  <img src="a-lee-c-a.com/assets/images/film_22.jpg" alt="" style="width:700px;height:500px;">
-  
+  <img src="assets/images/film_22.JPG" alt="" style="width:700px;height:500px;">
+ 
   <br> <br> <br> <br>
 
 
