--- a/index.html
+++ b/index.html
@@ -81,16 +81,16 @@
 
 
   Hi I'm Alicia Simons.(pronounced a-lee-c-a)   <br> <br>
-  graphic designer and photographer.  <br> <br>
-  This site is a work in progress.  <br> <br>
+  Working in House atm as a designer and photographer.  <br> <br>
+
   
   
  <a href="https://jamesandalicia.photos"> See some pics here. </a> <br><br>
    <a href="http://amici.studio/">See some work that I do with friends here.</a> <br><br>
- <a href="https://www.instagram.com/aleeca_simons/" target="_blank">See my instagram account here.</a>
+ <a href="https://www.instagram.com/aleeca_simons/" target="_blank">See my IG account here.</a>
   <br> <br>
   <a href="mailto:aleeca.simons@gmail.com">Email me here.</a><br><br>
-  Contact me for a folio selection !!
+<3 
 <br> <br> <br> <br>
   
   <img src="assets/images/film_22.JPG" alt="" style="width:700px;height:500px;">
